kubeConfigs/authserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authserver
  template:
    metadata:
      labels:
        app: authserver
    spec:
      containers:
        - name: authserver
          image: authserver-img 
          ports:
            - containerPort: 8083
