kubeConfigs/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: notification-img 
          ports:
            - containerPort: 8083
