kubeConfigs/rideservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rideservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rideservice
  template:
    metadata:
      labels:
        app: rideservice
    spec:
      containers:
        - name: rideservice
          image: rideservice-img 
          ports:
            - containerPort: 9083
