kubeConfigs/authserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authserver-service
spec:
  selector:
    app: authserver
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: NodePort
